// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSection component should render default view 1`] = `
<form>
  <StandardPage
    title="Add a new work"
  >
    <ForwardRef(Grid)
      container={true}
      spacing={3}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Identify your new work"
        >
          <ForwardRef(Grid)
            container={true}
            spacing={3}
          >
            <ForwardRef(Grid)
              item={true}
              xs={12}
            >
              <Field
                collectionFieldId="rek-ismemberof"
                component={
                  Object {
                    "$$typeof": Symbol(react.memo),
                    "WrappedComponent": Object {
                      "$$typeof": Symbol(react.memo),
                      "compare": null,
                      "type": [Function],
                    },
                    "compare": null,
                    "type": [Function],
                  }
                }
                disabled={false}
                floatingLabelText="Member of collections"
                fullWidth={true}
                hintText="Begin typing to select and add work to a list of collection(s)"
                name="adminSection.collections"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              />
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={12}
            >
              <Field
                component={[Function]}
                disabled={false}
                label="Work type"
                name="rek_display_type"
                placeholder="Select a Work type from the dropdown list"
                required={true}
                selectFieldId="rek-display-type"
                validate={
                  Array [
                    [Function],
                  ]
                }
              >
                <ForwardRef(MenuItem)
                  key="0"
                  value={130}
                >
                  Conference Paper
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="1"
                  value={174}
                >
                  Book
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="2"
                  value={177}
                >
                  Book Chapter
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="3"
                  value={179}
                >
                  Journal Article
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="4"
                  value={181}
                >
                  Department Technical Report
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="5"
                  value={183}
                >
                  Working Paper
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="6"
                  value={185}
                >
                  Patent
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="7"
                  value={187}
                >
                  Thesis
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="8"
                  value={189}
                >
                  Seminar Paper
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="9"
                  value={191}
                >
                  Newspaper Article
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="10"
                  value={197}
                >
                  Conference Proceedings
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="11"
                  value={202}
                >
                  Generic Document
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="12"
                  value={204}
                >
                  Preprint
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="13"
                  value={228}
                >
                  Digilib Image
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="14"
                  value={238}
                >
                  Image
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="15"
                  value={263}
                >
                  Audio Document
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="16"
                  value={275}
                >
                  Research Report
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="17"
                  value={294}
                >
                  Journal
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="18"
                  value={310}
                >
                  Video Document
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="19"
                  value={313}
                >
                  Creative Work
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="20"
                  value={316}
                >
                  Design
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="21"
                  value={371}
                >
                  Data Collection
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="22"
                  value={374}
                >
                  Manuscript
                </ForwardRef(MenuItem)>
              </Field>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={12}
            />
            <ForwardRef(Grid)
              item={true}
              xs={12}
            >
              <ForwardRef(Grid)
                container={true}
                spacing={1}
              >
                <ForwardRef(Grid)
                  item={true}
                  sx={
                    Object {
                      "display": Object {
                        "sm": "block",
                        "xs": "none",
                      },
                    }
                  }
                  xs={true}
                />
                <ForwardRef(Grid)
                  item={true}
                  sm="auto"
                  xs={12}
                >
                  <ForwardRef(Button)
                    color="secondary"
                    data-analyticsid="cancel-work"
                    data-testid="cancel-work"
                    fullWidth={true}
                    id="cancel-work"
                    onClick={[Function]}
                    variant="contained"
                  >
                    Cancel
                  </ForwardRef(Button)>
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                  sm="auto"
                  xs={12}
                >
                  <ForwardRef(Button)
                    color="primary"
                    data-analyticsid="submit-work"
                    data-testid="submit-work"
                    fullWidth={true}
                    id="submit-work"
                    variant="contained"
                  >
                    Create work
                  </ForwardRef(Button)>
                </ForwardRef(Grid)>
              </ForwardRef(Grid)>
            </ForwardRef(Grid)>
          </ForwardRef(Grid)>
        </StandardCard>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </StandardPage>
</form>
`;

exports[`AddSection component should render with subtypes 1`] = `
<form>
  <StandardPage
    title="Add a new work"
  >
    <ForwardRef(Grid)
      container={true}
      spacing={3}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Identify your new work"
        >
          <ForwardRef(Grid)
            container={true}
            spacing={3}
          >
            <ForwardRef(Grid)
              item={true}
              xs={12}
            >
              <Field
                collectionFieldId="rek-ismemberof"
                component={
                  Object {
                    "$$typeof": Symbol(react.memo),
                    "WrappedComponent": Object {
                      "$$typeof": Symbol(react.memo),
                      "compare": null,
                      "type": [Function],
                    },
                    "compare": null,
                    "type": [Function],
                  }
                }
                disabled={false}
                floatingLabelText="Member of collections"
                fullWidth={true}
                hintText="Begin typing to select and add work to a list of collection(s)"
                name="adminSection.collections"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              />
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={12}
            >
              <Field
                component={[Function]}
                disabled={false}
                label="Work type"
                name="rek_display_type"
                placeholder="Select a Work type from the dropdown list"
                required={true}
                selectFieldId="rek-display-type"
                validate={
                  Array [
                    [Function],
                  ]
                }
              >
                <ForwardRef(MenuItem)
                  key="0"
                  value={130}
                >
                  Conference Paper
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="1"
                  value={174}
                >
                  Book
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="2"
                  value={177}
                >
                  Book Chapter
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="3"
                  value={179}
                >
                  Journal Article
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="4"
                  value={181}
                >
                  Department Technical Report
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="5"
                  value={183}
                >
                  Working Paper
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="6"
                  value={185}
                >
                  Patent
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="7"
                  value={187}
                >
                  Thesis
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="8"
                  value={189}
                >
                  Seminar Paper
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="9"
                  value={191}
                >
                  Newspaper Article
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="10"
                  value={197}
                >
                  Conference Proceedings
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="11"
                  value={202}
                >
                  Generic Document
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="12"
                  value={204}
                >
                  Preprint
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="13"
                  value={228}
                >
                  Digilib Image
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="14"
                  value={238}
                >
                  Image
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="15"
                  value={263}
                >
                  Audio Document
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="16"
                  value={275}
                >
                  Research Report
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="17"
                  value={294}
                >
                  Journal
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="18"
                  value={310}
                >
                  Video Document
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="19"
                  value={313}
                >
                  Creative Work
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="20"
                  value={316}
                >
                  Design
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="21"
                  value={371}
                >
                  Data Collection
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  key="22"
                  value={374}
                >
                  Manuscript
                </ForwardRef(MenuItem)>
              </Field>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={12}
            >
              <ForwardRef(Grid)
                item={true}
                xs={12}
              >
                <Field
                  component={[Function]}
                  disabled={false}
                  id="rek-subtype"
                  label="Work subtype"
                  name="adminSection.rek_subtype"
                  placeholder="Select a work subtype from the dropdown list"
                  required={true}
                  selectFieldId="rek-subtype"
                  validate={
                    Array [
                      [Function],
                    ]
                  }
                />
              </ForwardRef(Grid)>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={12}
            >
              <ForwardRef(Grid)
                container={true}
                spacing={1}
              >
                <ForwardRef(Grid)
                  item={true}
                  sx={
                    Object {
                      "display": Object {
                        "sm": "block",
                        "xs": "none",
                      },
                    }
                  }
                  xs={true}
                />
                <ForwardRef(Grid)
                  item={true}
                  sm="auto"
                  xs={12}
                >
                  <ForwardRef(Button)
                    color="secondary"
                    data-analyticsid="cancel-work"
                    data-testid="cancel-work"
                    fullWidth={true}
                    id="cancel-work"
                    onClick={[Function]}
                    variant="contained"
                  >
                    Cancel
                  </ForwardRef(Button)>
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                  sm="auto"
                  xs={12}
                >
                  <ForwardRef(Button)
                    color="primary"
                    data-analyticsid="submit-work"
                    data-testid="submit-work"
                    fullWidth={true}
                    id="submit-work"
                    variant="contained"
                  >
                    Create work
                  </ForwardRef(Button)>
                </ForwardRef(Grid)>
              </ForwardRef(Grid)>
            </ForwardRef(Grid)>
          </ForwardRef(Grid)>
        </StandardCard>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </StandardPage>
</form>
`;
